--- a/domaca_naloga_1/README.mb
+++ b/domaca_naloga_1/README.mb
@@ -1,1 +1,30 @@
+# Rezerviral sem si naslednje naloge
+### [Učni list - Geometrija.pdf](https://www.sc-nm.si/sss/si/file/download/908_fa3f990d1fc9/U%C4%8Dni%20list%20-%20Geometrija.pdf)
+- 1
 
+### Učni list - Kotne funkcije v pravokotnem trikotniku.pdf](https://www.sc-nm.si/sss/si/file/download/824_4f7a2e4ab138/U%C4%8Dni%20list%20-%20Kotne%20funkcije%20v%20pravokotnem%20trikotniku.pdf)
+- 1
+
+### Učni list - Računanje s koreni.pdf](https://www.sc-nm.si/sss/si/file/download/827_d73e71be4845/U%C4%8Dni%20list%20-%20Ra%C4%8Dunanje%20s%20koreni.pdf)
+- 1
+
+### Učni list - Potence z racionalnim eksponentom.pdf](https://www.sc-nm.si/sss/si/file/download/828_6210b4708ab3/U%C4%8Dni%20list%20-%20Potence%20z%20racionalnim%20eksponentom.pdf)
+- 1
+
+### [Učni list - Kvadratna funkcija.pdf](https://www.sc-nm.si/sss/file/open/763_ef3adea10a46/U%C4%8Dni%20list%20-%20Kvadratna%20funkcija.pdf)
+- 1
+
+### [Učni list - Ploščine geometrijskih likov.pdf](https://www.sc-nm.si/sss/si/file/download/790_96f4e0ca1618/U%C4%8Dni%20list%20-%20Plo%C5%A1%C4%8Dine%20geometrijskih%20likov.pdf)
+- 1
+
+### [Učni list - Polinomi - 1.pdf](https://www.sc-nm.si/sss/file/open/599_bb49bdbafe02/U%C4%8Dni%20list%20-%20Polinomi%20-%201.pdf)
+- 1
+
+### [Učni list - Polinomi - 2.pdf](https://www.sc-nm.si/sss/si/file/download/788_0fdf4f486b6d/U%C4%8Dni%20list%20-%20Polinomi%20-%202.pdf)
+- 1
+
+### [Učni list - Racionalna funkcija - 1.pdf](https://www.sc-nm.si/sss/file/open/584_3135100d7326/U%C4%8Dni%20list%20-%20Racionalna%20funkcija-1.pdf)
+- 1
+
+### [Učni list - Racionalna funkcija - 2.pdf](https://www.sc-nm.si/sss/file/open/590_6383086e26b5/U%C4%8Dni%20list%20-%20Racionalna%20funkcija-2.pdf)
+- 1
